--- a/style.css
+++ b/style.css
@@ -1,11 +1,21 @@
 * {
-  font-family: "ComicSans";
+  font-family: "Arial";
 }
+
 h1 {
-  font-size: 24px;
+  font-size: 28px;
   color: black;
 }
+
 p {
   font-size: 18px;
 color: black;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+h3 {
+  font-size: 18px;
 }
