--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 header {
   background-image: url("https://scontent.xx.fbcdn.net/v/t1.0-9/11702896_10153593622399050_2762491778545875667_n.jpg?oh=c785fb99bbcc30eef85452ff685c73ed&oe=5984D31F");
   height: 500px;
-  background-position: center center;
+  background-position: center;
 }
 
 h1 {
