--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-header {
-  background-image: url("https://scontent.xx.fbcdn.net/v/t1.0-9/11702896_10153593622399050_2762491778545875667_n.jpg?oh=c785fb99bbcc30eef85452ff685c73ed&oe=5984D31F");
-  background-position: center;
+body {
+  background-color: black
+    text: white
 }
 
 h1 {
